--- a/pps/raw/Makefile
+++ b/pps/raw/Makefile
@@ -4,5 +4,8 @@ CFLAGS := -g
 LIBS := -lpcap
 
 rawperf: common.c rawperf.c
-	gcc $(CFLAGS) common.c rawperf.c $(LIBS) -o rawperf
+	mkdir -p bin
+	gcc $(CFLAGS) common.c rawperf.c $(LIBS) -o bin/rawperf
 
+clean:
+	rm -f bin/rawperf
